                                                             )
          ,%,                                     ) _(___[]_
          %%%,&&&, dnsfw.bacon.place   ,%%,      (;`       /\
          %Y/%&&&&  rlynk@bacon.place  %%%%   ___/_____)__/ _\__     ,%%,
        ^^^||^&\Y&^^^^^^^^^^^^^^^^^^^^^%Y/%^^/ (_()   (  | /____/\^^^%%%%^^
          `    || _,..=xxxxxxxxxxxx,    ||   |(' |LI (.)I| | LI ||   %\Y%
         -=      /L_Y.-"""""""""`,-n-. `    @'---|__||___|_|____||_   ||
        ___-=___.--'[========]|L]J: []\ __________@//@___________) )______
       -= _ _ _ |/ _ ''_ " " ||[ -_ 4 |  _  _  _  _  _  _  _  _  _  _  _
                '-(_)-(_)----'v'-(_)--'
       jgs-----------------------------------------------------------------

################
# + additions
# * changes
# ! known issues
# x fixes
################

====================================
=== v1.2.0-rc1 : August 30, 2019 ===
+ we are now able to use systemd as a service.
+ makefile now supports make install && make service
+ added CHANGES like a real application.
+ added UPGRADES file.
* we no longer fork by default due to systemd (see -f startup flag)
* debug level can now be set in config.
* config file is not backwards compatible. see UPGRADES.
* config and log files are now dnsfw.conf and .log, dropping the d.
* Makefile now specifies std=gnu99 during build.

! extra spaces in config file causes incorrect parsing as a wildcard.

x better sanitization of hostname characters in config

======================================
=== v1.0.1-alpha2 : August 5, 2019 ===
x fixed an issue that prevented compile in some gcc versions.

! this changelog is not present in this version, haha