@@ -1,8 +1,7 @@
-# backup line incase you dont listen to the warning, remove the #...
-#!V:2
 # DO NOT REMOVE OR MODIFY THE FOLLOWING LINE OR CORRUPTION COULD OCCUR
-!V:2
-#!D:<num> is a debug level, or sum thereof, of following:
+!Version:2
+
+#!Debug:<num> is a debug level, or sum thereof, of following:
 # 0: None - no logfile entries will occur
 # 1: Notice
 # 2: Error
@@ -13,7 +12,16 @@
 # --- the following may be used as well and have been pre-calculated for you.
 # 15: Notice, Error, Info, Warning (Recommended)
 # 63: All levels (Not recommended)
-!D:15
+!Debug:15
+
+#!Fork:0/1 - Do we want to fork to background on run? systemd
+# does not like it so we default to no.
+!Fork:0
+
+#!Block:0/1 - Do we want to automatically block inbound traffic
+# and only allow connections from our authorized hosts?
+!Block:1
+
 # Bacon Dns Firewall Config File
 # Hashbang represents a comment in this configuration
 # DO NOT LEAVE TRAILING SPACES
@@ -27,3 +35,4 @@
 # the.rdns.com 0
 local.bacon.place 22 2500 80
 not.a.real.host 0
+0.0.0.0 80 443
