@@ -19,19 +19,17 @@
 #include "dnsfw.h"
 #include "debug.h"
 extern host *pheadhost;
+extern int forkable;
+extern int block;
 /* Embedded file: dnsfw.conf */
-const int fsize = 756;
-const unsigned char conf_original[757] = {
-0x23,0x20,0x62,0x61,0x63,0x6b,0x75,0x70,0x20,0x6c,0x69,0x6e,0x65,0x20,0x69,0x6e,
-0x63,0x61,0x73,0x65,0x20,0x79,0x6f,0x75,0x20,0x64,0x6f,0x6e,0x74,0x20,0x6c,0x69,
-0x73,0x74,0x65,0x6e,0x20,0x74,0x6f,0x20,0x74,0x68,0x65,0x20,0x77,0x61,0x72,0x6e,
-0x69,0x6e,0x67,0x2c,0x20,0x72,0x65,0x6d,0x6f,0x76,0x65,0x20,0x74,0x68,0x65,0x20,
-0x23,0x2e,0x2e,0x2e,0x0a,0x23,0x21,0x56,0x3a,0x32,0x0a,0x23,0x20,0x44,0x4f,0x20,
-0x4e,0x4f,0x54,0x20,0x52,0x45,0x4d,0x4f,0x56,0x45,0x20,0x4f,0x52,0x20,0x4d,0x4f,
-0x44,0x49,0x46,0x59,0x20,0x54,0x48,0x45,0x20,0x46,0x4f,0x4c,0x4c,0x4f,0x57,0x49,
-0x4e,0x47,0x20,0x4c,0x49,0x4e,0x45,0x20,0x4f,0x52,0x20,0x43,0x4f,0x52,0x52,0x55,
-0x50,0x54,0x49,0x4f,0x4e,0x20,0x43,0x4f,0x55,0x4c,0x44,0x20,0x4f,0x43,0x43,0x55,
-0x52,0x0a,0x21,0x56,0x3a,0x32,0x0a,0x23,0x21,0x44,0x3a,0x3c,0x6e,0x75,0x6d,0x3e,
+const int fsize = 953;
+const unsigned char file[954] = {
+0x23,0x20,0x44,0x4f,0x20,0x4e,0x4f,0x54,0x20,0x52,0x45,0x4d,0x4f,0x56,0x45,0x20,
+0x4f,0x52,0x20,0x4d,0x4f,0x44,0x49,0x46,0x59,0x20,0x54,0x48,0x45,0x20,0x46,0x4f,
+0x4c,0x4c,0x4f,0x57,0x49,0x4e,0x47,0x20,0x4c,0x49,0x4e,0x45,0x20,0x4f,0x52,0x20,
+0x43,0x4f,0x52,0x52,0x55,0x50,0x54,0x49,0x4f,0x4e,0x20,0x43,0x4f,0x55,0x4c,0x44,
+0x20,0x4f,0x43,0x43,0x55,0x52,0x0a,0x21,0x56,0x65,0x72,0x73,0x69,0x6f,0x6e,0x3a,
+0x32,0x0a,0x0a,0x23,0x21,0x44,0x65,0x62,0x75,0x67,0x3a,0x3c,0x6e,0x75,0x6d,0x3e,
 0x20,0x69,0x73,0x20,0x61,0x20,0x64,0x65,0x62,0x75,0x67,0x20,0x6c,0x65,0x76,0x65,
 0x6c,0x2c,0x20,0x6f,0x72,0x20,0x73,0x75,0x6d,0x20,0x74,0x68,0x65,0x72,0x65,0x6f,
 0x66,0x2c,0x20,0x6f,0x66,0x20,0x66,0x6f,0x6c,0x6c,0x6f,0x77,0x69,0x6e,0x67,0x3a,
@@ -52,24 +50,40 @@ const unsigned char conf_original[757] = {
 0x67,0x20,0x28,0x52,0x65,0x63,0x6f,0x6d,0x6d,0x65,0x6e,0x64,0x65,0x64,0x29,0x0a,
 0x23,0x20,0x36,0x33,0x3a,0x20,0x41,0x6c,0x6c,0x20,0x6c,0x65,0x76,0x65,0x6c,0x73,
 0x20,0x28,0x4e,0x6f,0x74,0x20,0x72,0x65,0x63,0x6f,0x6d,0x6d,0x65,0x6e,0x64,0x65,
-0x64,0x29,0x0a,0x21,0x44,0x3a,0x31,0x35,0x0a,0x23,0x20,0x42,0x61,0x63,0x6f,0x6e,
-0x20,0x44,0x6e,0x73,0x20,0x46,0x69,0x72,0x65,0x77,0x61,0x6c,0x6c,0x20,0x43,0x6f,
-0x6e,0x66,0x69,0x67,0x20,0x46,0x69,0x6c,0x65,0x0a,0x23,0x20,0x48,0x61,0x73,0x68,
-0x62,0x61,0x6e,0x67,0x20,0x72,0x65,0x70,0x72,0x65,0x73,0x65,0x6e,0x74,0x73,0x20,
-0x61,0x20,0x63,0x6f,0x6d,0x6d,0x65,0x6e,0x74,0x20,0x69,0x6e,0x20,0x74,0x68,0x69,
-0x73,0x20,0x63,0x6f,0x6e,0x66,0x69,0x67,0x75,0x72,0x61,0x74,0x69,0x6f,0x6e,0x0a,
-0x23,0x20,0x44,0x4f,0x20,0x4e,0x4f,0x54,0x20,0x4c,0x45,0x41,0x56,0x45,0x20,0x54,
-0x52,0x41,0x49,0x4c,0x49,0x4e,0x47,0x20,0x53,0x50,0x41,0x43,0x45,0x53,0x0a,0x23,
-0x0a,0x23,0x20,0x50,0x6c,0x65,0x61,0x73,0x65,0x20,0x73,0x74,0x6f,0x72,0x65,0x20,
-0x61,0x73,0x3a,0x0a,0x23,0x0a,0x23,0x20,0x74,0x68,0x65,0x2e,0x72,0x6e,0x64,0x73,
-0x2e,0x63,0x6f,0x6d,0x20,0x32,0x33,0x20,0x31,0x30,0x30,0x30,0x20,0x34,0x30,0x30,
-0x0a,0x23,0x0a,0x23,0x20,0x6f,0x72,0x2c,0x20,0x66,0x6f,0x72,0x20,0x61,0x6c,0x6c,
-0x20,0x70,0x6f,0x72,0x74,0x73,0x20,0x61,0x6e,0x64,0x20,0x70,0x72,0x6f,0x74,0x6f,
-0x3a,0x0a,0x23,0x0a,0x23,0x20,0x74,0x68,0x65,0x2e,0x72,0x64,0x6e,0x73,0x2e,0x63,
-0x6f,0x6d,0x20,0x30,0x0a,0x6c,0x6f,0x63,0x61,0x6c,0x2e,0x62,0x61,0x63,0x6f,0x6e,
-0x2e,0x70,0x6c,0x61,0x63,0x65,0x20,0x32,0x32,0x20,0x32,0x35,0x30,0x30,0x20,0x38,
-0x30,0x0a,0x6e,0x6f,0x74,0x2e,0x61,0x2e,0x72,0x65,0x61,0x6c,0x2e,0x68,0x6f,0x73,
-0x74,0x20,0x30,0x0a
+0x64,0x29,0x0a,0x21,0x44,0x65,0x62,0x75,0x67,0x3a,0x31,0x35,0x0a,0x0a,0x23,0x21,
+0x46,0x6f,0x72,0x6b,0x3a,0x30,0x2f,0x31,0x20,0x2d,0x20,0x44,0x6f,0x20,0x77,0x65,
+0x20,0x77,0x61,0x6e,0x74,0x20,0x74,0x6f,0x20,0x66,0x6f,0x72,0x6b,0x20,0x74,0x6f,
+0x20,0x62,0x61,0x63,0x6b,0x67,0x72,0x6f,0x75,0x6e,0x64,0x20,0x6f,0x6e,0x20,0x72,
+0x75,0x6e,0x3f,0x20,0x73,0x79,0x73,0x74,0x65,0x6d,0x64,0x0a,0x23,0x20,0x64,0x6f,
+0x65,0x73,0x20,0x6e,0x6f,0x74,0x20,0x6c,0x69,0x6b,0x65,0x20,0x69,0x74,0x20,0x73,
+0x6f,0x20,0x77,0x65,0x20,0x64,0x65,0x66,0x61,0x75,0x6c,0x74,0x20,0x74,0x6f,0x20,
+0x6e,0x6f,0x2e,0x0a,0x21,0x46,0x6f,0x72,0x6b,0x3a,0x30,0x0a,0x0a,0x23,0x21,0x42,
+0x6c,0x6f,0x63,0x6b,0x3a,0x30,0x2f,0x31,0x20,0x2d,0x20,0x44,0x6f,0x20,0x77,0x65,
+0x20,0x77,0x61,0x6e,0x74,0x20,0x74,0x6f,0x20,0x61,0x75,0x74,0x6f,0x6d,0x61,0x74,
+0x69,0x63,0x61,0x6c,0x6c,0x79,0x20,0x62,0x6c,0x6f,0x63,0x6b,0x20,0x69,0x6e,0x62,
+0x6f,0x75,0x6e,0x64,0x20,0x74,0x72,0x61,0x66,0x66,0x69,0x63,0x0a,0x23,0x20,0x61,
+0x6e,0x64,0x20,0x6f,0x6e,0x6c,0x79,0x20,0x61,0x6c,0x6c,0x6f,0x77,0x20,0x63,0x6f,
+0x6e,0x6e,0x65,0x63,0x74,0x69,0x6f,0x6e,0x73,0x20,0x66,0x72,0x6f,0x6d,0x20,0x6f,
+0x75,0x72,0x20,0x61,0x75,0x74,0x68,0x6f,0x72,0x69,0x7a,0x65,0x64,0x20,0x68,0x6f,
+0x73,0x74,0x73,0x3f,0x0a,0x21,0x42,0x6c,0x6f,0x63,0x6b,0x3a,0x31,0x0a,0x0a,0x23,
+0x20,0x42,0x61,0x63,0x6f,0x6e,0x20,0x44,0x6e,0x73,0x20,0x46,0x69,0x72,0x65,0x77,
+0x61,0x6c,0x6c,0x20,0x43,0x6f,0x6e,0x66,0x69,0x67,0x20,0x46,0x69,0x6c,0x65,0x0a,
+0x23,0x20,0x48,0x61,0x73,0x68,0x62,0x61,0x6e,0x67,0x20,0x72,0x65,0x70,0x72,0x65,
+0x73,0x65,0x6e,0x74,0x73,0x20,0x61,0x20,0x63,0x6f,0x6d,0x6d,0x65,0x6e,0x74,0x20,
+0x69,0x6e,0x20,0x74,0x68,0x69,0x73,0x20,0x63,0x6f,0x6e,0x66,0x69,0x67,0x75,0x72,
+0x61,0x74,0x69,0x6f,0x6e,0x0a,0x23,0x20,0x44,0x4f,0x20,0x4e,0x4f,0x54,0x20,0x4c,
+0x45,0x41,0x56,0x45,0x20,0x54,0x52,0x41,0x49,0x4c,0x49,0x4e,0x47,0x20,0x53,0x50,
+0x41,0x43,0x45,0x53,0x0a,0x23,0x0a,0x23,0x20,0x50,0x6c,0x65,0x61,0x73,0x65,0x20,
+0x73,0x74,0x6f,0x72,0x65,0x20,0x61,0x73,0x3a,0x0a,0x23,0x0a,0x23,0x20,0x74,0x68,
+0x65,0x2e,0x72,0x6e,0x64,0x73,0x2e,0x63,0x6f,0x6d,0x20,0x32,0x33,0x20,0x31,0x30,
+0x30,0x30,0x20,0x34,0x30,0x30,0x0a,0x23,0x0a,0x23,0x20,0x6f,0x72,0x2c,0x20,0x66,
+0x6f,0x72,0x20,0x61,0x6c,0x6c,0x20,0x70,0x6f,0x72,0x74,0x73,0x20,0x61,0x6e,0x64,
+0x20,0x70,0x72,0x6f,0x74,0x6f,0x3a,0x0a,0x23,0x0a,0x23,0x20,0x74,0x68,0x65,0x2e,
+0x72,0x64,0x6e,0x73,0x2e,0x63,0x6f,0x6d,0x20,0x30,0x0a,0x6c,0x6f,0x63,0x61,0x6c,
+0x2e,0x62,0x61,0x63,0x6f,0x6e,0x2e,0x70,0x6c,0x61,0x63,0x65,0x20,0x32,0x32,0x20,
+0x32,0x35,0x30,0x30,0x20,0x38,0x30,0x0a,0x6e,0x6f,0x74,0x2e,0x61,0x2e,0x72,0x65,
+0x61,0x6c,0x2e,0x68,0x6f,0x73,0x74,0x20,0x30,0x0a,0x30,0x2e,0x30,0x2e,0x30,0x2e,
+0x30,0x20,0x38,0x30,0x20,0x34,0x34,0x33,0x0a,
 };
 
 /***
@@ -108,8 +122,36 @@ int load_config(void)
 		if ((line[0] == '#') || (line[0] == '\n')) // comments (also 0x24 ? or \35 ?)
 			continue;
 
+		if (sscanf(line, "!Fork:%d", &forkable))
+		{
+			if ((forkable != 0) && (forkable != 1))
+			{
+				sprintf_log(DEBUG_WARNING, "%s:%d -> Fork value is incorrect; defaulting to off.", CONF_FILE, linecount);
+				forkable = 0;
+
+				continue;
+			}
+
+			sprintf_log(DEBUG_INFO, "%s:%d -> set fork to %d", CONF_FILE, linecount, forkable);
+			continue;
+		}
+
+		if (sscanf(line, "!Block:%d", &block))
+		{
+			if ((block != 0) && (block != 1))
+			{
+				sprintf_log(DEBUG_WARNING, "%s:%d -> Block value is incorrect; defaulting to off.", CONF_FILE, linecount);
+				block = 0;
+
+				continue;
+			}
+
+			sprintf_log(DEBUG_INFO, "%s:%d -> set blocking to %d", CONF_FILE, linecount, block);
+			continue;
+		}
+
 		// [! = 0x21 or  \33 ] [V = 0x56 or \86 ]
-		if ((line[0] == '!') && (line[1] == 'V') && line[2] == ':') // version checking
+		if ((line[0] == '!') && (line[1] == 'V') && (line[2] == 'e') && (line[3] == 'r') && (line[4] == 's') && (line[5] == 'i') && (line[6] == 'o') && (line[7] == 'n') && (line[8] == ':'))// version checking
 		{
 			// version string
 			if (version > 0)
@@ -119,28 +161,28 @@ int load_config(void)
 				exit(0);
 			}
 
-			if (!isdigit(line[3]))
+			if (!isdigit(line[9]))
 			{
 				// Our version tag is not a numerical value, single digit in this case.
-				sprintf_log(DEBUG_ERROR, "%s:%d -> version %c is not numeric",  CONF_FILE, linecount, line[3]);
+				sprintf_log(DEBUG_ERROR, "%s:%d -> version %c is not numeric",  CONF_FILE, linecount, line[9]);
 				exit(0);
 			}
 			// the version of our database is too old to continue in this way.
-			if ((int)line[3] < CONF_VERSION)
+			if ((int)line[9] < CONF_VERSION)
 			{
-				sprintf_log(DEBUG_ERROR, "%s:%d config version [%d] is too old (expected %d). Please see UPGRADE.TXT",  CONF_FILE, linecount, line[3], CONF_VERSION);
+				sprintf_log(DEBUG_ERROR, "%s:%d -> config version [%d] is too old (expected %d). Please see UPGRADE.TXT",  CONF_FILE, linecount, line[9], CONF_VERSION);
 				exit(0);
 			}
 
-			version = (int)line[3];
+			version = (int)line[9];
 			continue;
 		} // end of version tag
 
-		if ((line[0] == '!') && (line[1] == 'D') && line[2] == ':') // debug level!
+		if ((line[0] == '!') && (line[1] == 'D') && (line[2] == 'e') && (line[3] == 'b') && (line[4] == 'u') && (line[5] == 'g') && (line[6] == ':')) // debug level!
 		{
 			int userDebugLevel=0;
 
-			if (sscanf(line, "!D:%d", &userDebugLevel) == 0)
+			if (sscanf(line, "!Debug:%d", &userDebugLevel) == 0)
 			{
 				sprintf_log(DEBUG_WARNING, "%s:%d debug level not numberic; using default.", CONF_FILE, linecount);
 				continue;
